hotfix: revert Onest font to static format to fix About page metric shifting, but keep weight 800 for the Brands page

--- a/src/pages/Brands.module.css
+++ b/src/pages/Brands.module.css
@@ -38,10 +38,10 @@
 
 .frameParent {
   width: var(--width-1720);
+  max-width: 1720px;
   display: flex;
   flex-direction: column;
-  max-width: 100%;
-  margin-left: 2px;
+  margin: 0 auto;
 }
 
 .breadcrumb {
@@ -69,6 +69,8 @@
   position: relative;
   overflow: hidden;
   aspect-ratio: 849.5 / 520;
+  max-width: 849.5px;
+  max-height: 520px;
   min-height: 280px;
   cursor: pointer;
   transition: transform 0.3s ease;
